# bsuir

./: .gitignore  LICENSE  README.md  Template.dotx
2_1/PIAA/: Внешнее проектирование ПО.doc
3/: Template.dotx
3/BZC/: Questions.doc
3/MNA/: dlmc.docx
3/Metrology/: IPR2.docx  KR2.docx
3/PPO/: IPR1.docx  IPR2.docx  KR1.docx  KR2.docx  use-case.graffle
3/Physics/: KR1.docx  KR2.docx
3/SP/: dlmc.docx
3_1/Metrology/: IPR1.docx
3_1/PPO/: External Software Design.docx  IPR2.docx  KR1.dotx  KR2.dotx  Software Testing Methods.docx  dlmc.doc
5/: Plan.doc
5/1/: _template.dotx  ЭУМКД_ИГИ.doc
5/1/MZI2/src/: CMakeLists.txt  aes.cpp  aes.h  bitvector.h  caesar.cpp  caesar.h  des.h  ecc.cpp  ecc.h  eccfield.h  gost.cpp  gost.h  gost3410.cpp  gost3411.h  main.cpp  md5.cpp  md5.h  rsa.h  utility.h
5/2/: Volorova  _template.dotx
Diploma/: 0) Практика.docx  1) Титульный лист.doc  10) Речь.docx  2) Аннотация +.docx  2) Аннотация.docx  3) Реферат.docx  4) Лист задания +.doc  4) Лист задания.doc  5) Основная часть -.docx  5) Основная часть.docx  7) Справка о внедрении +.docx  8) Отзыв. ДП. Дегтярев А.А..doc  9) Рецензия. ДП. Дегтярев А.А..doc  Economic.xlsx  Бланк диплома, Дегтярев 393551.doc  Заметки  Заметки.md  Речь
Diploma/6) Ведомость документов +.graffle/: data.plist
Diploma/6) Ведомость документов.graffle/: data.plist
Diploma/Graphics/: Graphics11.graffle
Diploma/Pics/: 3.2
Ideology/: Liberalism.docx  Liberalism_Degtyarev.docx
PIAA/: Задание.doc  Обзор методов тестирования ПО.doc
Psychology/: questions.txt
Templates/: Control Work Template.docx
(+533 files in other folders)
